<resources>
    <string name="appName">Failure</string>
    <string name="appDescription">A grade tracking app, created by failures, for failures.</string>

    <!-- Common Strings -->
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="contributors">Contributors</string>
    <string name="create">Create</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="submittables">Submittables</string>
    <string name="dateFormatHelperText">Dates are formatted as yyyy/mm/dd.</string>
    <string name="dateInterval">%1$s - %2$s</string>
    <string name="dueDate">Due %1$s</string>

    <!-- Fragment Titles -->
    <string name="aboutFragmentTitle">About %1$s</string>
    <string name="addCourseFragmentTitle">Add course</string>
    <string name="addSubmittableFragmentTitle">Add submittable</string>
    <string name="courseOverviewFragmentTitle">%1$s</string>
    <string name="editCourseFragmentTitle">Edit %1$s</string>
    <string name="editSubmittableFragmentTitle">Edit %1$s</string>
    <string name="homeFragmentTitle">Courses</string>
    <string name="submittableInfoFragmentTitle">%1$s</string>

    <!-- Home Fragment -->
    <string name="textCourseListEmptyHintHeader_text">No courses</string>
    <string name="textCourseListEmptyHintBody_text">Create a course using the + button</string>

    <!-- Course Overview Fragment -->
    <string name="textSubmittableListEmptyHintHeader_text">No submittables</string>
    <string name="textSubmittableListEmptyHintBody_text">Create submittables using the + button</string>
    <string name="textCourseOverviewMinimumGrade_text">Passing Grade: %1$s%%</string>

    <!-- Add Course Fragment -->
    <string name="editTextCourseName_hint">Name</string>
    <string name="editTextCourseSubject_hint">Subject (Optional)</string>
    <string name="editTextCourseStartDate_hint">Start Date</string>
    <string name="editTextCourseEndDate_hint">End Date</string>
    <string name="editTextCourseMinimumGrade_hint">Passing Grade (Optional)</string>
    <string name="editTextCourseMinimumGrade_helperText">The minimum grade needed in this course to pass; defaults to 50 if left blank.</string>
    <string name="editTextCourseName_errorHint">Invalid Name</string>
    <string name="editTextCourseStartDate_errorHint">Invalid Start Date</string>
    <string name="editTextCourseEndDate_errorHint">Invalid End Date</string>
    <string name="buttonDebugAddCourse_label">Create Sample Course</string>

    <!-- Add Submittable Fragment -->
    <string name="editTextSubmittableName_hint">Name</string>
    <string name="editTextSubmittableDescription_hint">Description (Optional)</string>
    <string name="editTextSubmittableAssignDate_hint">Date Assigned</string>
    <string name="editTextSubmittableDueDate_hint">Due Date</string>
    <string name="editTextSubmittableWeight_hint">Weight</string>
    <string name="editTextSubmittableWeight_helperText">A decimal between 0 and 100, inclusive.</string>
    <string name="editTextSubmittableMaxGrade_hint">Max Grade (Optional)</string>
    <string name="editTextSubmittableMaxGrade_helperText">How many points this assignment is out of; defaults to 100 if left blank.</string>
    <string name="editTextSubmittableName_errorHint">Invalid Name</string>
    <string name="editTextSubmittableAssignDate_errorHint">Invalid Start Date</string>
    <string name="editTextSubmittableDueDate_errorHint">Invalid End Date</string>
    <string name="editTextSubmittableWeight_errorHint">Invalid Weight</string>

    <!-- Submittable Info Fragment -->
    <string name="textSubmittableInfoWeight_text">Weight: %1$s%%</string>
    <string name="editTextSubmittableInfoAchievedGrade_hint">Achieved Grade</string>
    <string name="editTextSubmittableInfoAchievedGrade_helperText">Leave blank to mark this submittable as incomplete.</string>

</resources>