<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/homeFragment">
    <fragment
            android:id="@+id/homeFragment"
            android:name="com.yepdevelopment.failure.Fragments.HomeFragment"
            android:label="@string/homeFragmentTitle"
            tools:layout="@layout/fragment_home">
        <action
                android:id="@+id/action_homeFragment_to_addCourseFragment"
                app:destination="@id/addCourseFragment"
                app:popUpTo="@id/homeFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popExitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in" />
        <action
                android:id="@+id/action_homeFragment_to_courseOverviewFragment"
                app:destination="@id/courseOverviewFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in"
                app:popExitAnim="@anim/pop_out"
                app:popUpTo="@id/homeFragment" />
        <action
                android:id="@+id/action_homeFragment_to_aboutFragment"
                app:destination="@id/aboutFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in"
                app:popExitAnim="@anim/pop_out" />
    </fragment>
    <fragment
            android:id="@+id/addCourseFragment"
            android:name="com.yepdevelopment.failure.Fragments.AddCourseFragment"
            android:label="@string/addCourseFragmentTitle"
            tools:layout="@layout/fragment_add_course" />
    <fragment
            android:id="@+id/courseOverviewFragment"
            android:name="com.yepdevelopment.failure.Fragments.CourseOverviewFragment"
            android:label="@string/courseOverviewFragmentTitle"
            tools:layout="@layout/fragment_course_overview" >
        <action
                android:id="@+id/action_courseOverviewFragment_to_addSubmittableFragment"
                app:destination="@id/addSubmittableFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in"
                app:popExitAnim="@anim/pop_out"
                app:popUpTo="@id/courseOverviewFragment" />
        <action
                android:id="@+id/action_courseOverviewFragment_to_submittableInfoFragment"
                app:destination="@id/submittableInfoFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in"
                app:popExitAnim="@anim/pop_out" />
        <action
                android:id="@+id/action_courseOverviewFragment_to_editCourseFragment"
                app:destination="@id/editCourseFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in"
                app:popExitAnim="@anim/pop_out" />
    </fragment>
    <fragment
            android:id="@+id/aboutFragment"
            android:name="com.yepdevelopment.failure.Fragments.AboutFragment"
            android:label="@string/aboutFragmentTitle"
            tools:layout="@layout/fragment_about" />
    <fragment
            android:id="@+id/addSubmittableFragment"
            android:name="com.yepdevelopment.failure.Fragments.AddSubmittableFragment"
            android:label="@string/addSubmittableFragmentTitle"
            tools:layout="@layout/fragment_add_submittable" />
    <fragment
            android:id="@+id/submittableInfoFragment"
            android:name="com.yepdevelopment.failure.Fragments.SubmittableInfoFragment"
            android:label="@string/submittableInfoFragmentTitle"
            tools:layout="@layout/fragment_submittable_info" >
        <action
                android:id="@+id/action_submittableInfoFragment_to_editSubmittableFragment"
                app:destination="@id/editSubmittableFragment"
                app:enterAnim="@anim/pop_in"
                app:exitAnim="@anim/pop_out"
                app:popEnterAnim="@anim/pop_back_in"
                app:popExitAnim="@anim/pop_out" />
    </fragment>
    <fragment
            android:id="@+id/editCourseFragment"
            android:name="com.yepdevelopment.failure.Fragments.EditCourseFragment"
            android:label="@string/editCourseFragmentTitle"
            tools:layout="@layout/fragment_edit_course" />
    <fragment
            android:id="@+id/editSubmittableFragment"
            android:name="com.yepdevelopment.failure.Fragments.EditSubmittableFragment"
            android:label="@string/editSubmittableFragmentTitle"
            tools:layout="@layout/fragment_edit_submittable" />
</navigation>