<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.AboutFragment"
        android:id="@+id/aboutFragmentLayoutRoot" >

    <TextView
            android:text="@string/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAboutAppName"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/appDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAboutAppDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAboutAppName"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/gray" />

    <TextView
            android:text="@string/contributors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textAboutContributorsTitle"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/textAboutAppDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recyclerViewContributors"
            app:layout_constraintTop_toBottomOf="@+id/textAboutContributorsTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>