<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.CourseOverviewFragment"
        android:id="@+id/courseOverviewFragmentLayoutRoot">

    <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/groupSubmittablesListEmptyHint"
            app:constraint_referenced_ids="textSubmittablesListEmptyHintHeader,textSubmittablesListEmptyHintBody" />

    <include
            layout="@layout/component_entity_dash"
            android:id="@+id/courseOverviewDash" />

    <TextView
            android:text="@string/submittables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textCourseOverviewSubmittablesTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/courseOverviewDash" />

    <TextView
            android:text="@string/textSubmittableListEmptyHintHeader_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSubmittablesListEmptyHintHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCourseOverviewSubmittablesTitle"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/gray" />

    <TextView
            android:text="@string/textSubmittableListEmptyHintBody_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSubmittablesListEmptyHintBody"
            app:layout_constraintTop_toBottomOf="@+id/textSubmittablesListEmptyHintHeader"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textColor="@color/darkerGray" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCourseOverviewSubmittablesTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/recyclerViewSubmittablesList" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:src="@android:drawable/ic_input_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/floatingActionButtonAddSubmittable"
            style="@style/customFloatingActionButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>